tools/perf: Changes for Axxia CoreSight Support
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/tools/perf/Makefile.config
+++ b/tools/perf/Makefile.config
@@ -535,7 +535,7 @@ strip-libs = $(filter-out -l%,$(1))
 
 ifdef CSTRACE_PATH
   ifeq (${IS_64_BIT}, 1)
-    CSTRACE_LNX = linux64
+    CSTRACE_LNX = linux-arm64
   else
     CSTRACE_LNX = linux
   endif
