--- a/arch/arm64/configs/axxia_x9_rt_dbg_defconfig
+++ b/arch/arm64/configs/axxia_x9_rt_dbg_defconfig
@@ -30,8 +30,7 @@ CONFIG_SYSCTL_SYSCALL=y
 CONFIG_PROFILING=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-# CONFIG_BLK_DEV_BSG is not set
-# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_DEFAULT_DEADLINE=y
 CONFIG_ARCH_AXXIA=y
 CONFIG_ARCH_THUNDER=y
 CONFIG_ARCH_VEXPRESS=y
@@ -46,12 +45,11 @@ CONFIG_RAPIDIO_DEBUG=y
 CONFIG_RAPIDIO_ENUM_BASIC=y
 CONFIG_RAPIDIO_CPS_XX=y
 CONFIG_RAPIDIO_CPS_GEN2=y
-CONFIG_PREEMPT_RT_FULL=y
+CONFIG_SCHED_MC=y
 CONFIG_KSM=y
 CONFIG_CMA=y
 CONFIG_KEXEC=y
 CONFIG_CMDLINE="console=ttyAMA0"
-# CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -112,6 +110,9 @@ CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_AHCI_XGENE=y
 CONFIG_PATA_PLATFORM=y
 CONFIG_PATA_OF_PLATFORM=y
+CONFIG_MD=y
+CONFIG_BLK_DEV_DM=y
+CONFIG_DM_VERITY=y
 CONFIG_NETDEVICES=y
 CONFIG_MACVLAN=y
 CONFIG_RIONET=y
@@ -206,6 +207,7 @@ CONFIG_VMFS_IRQ=0
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_DEBUG_PAGEALLOC=y
 CONFIG_DEBUG_OBJECTS=y
 CONFIG_DEBUG_OBJECTS_SELFTEST=y
@@ -222,7 +224,7 @@ CONFIG_DEBUG_STACK_USAGE=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_SHIRQ=y
 CONFIG_LOCKUP_DETECTOR=y
-# CONFIG_SCHED_DEBUG is not set
+CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_RT_MUTEXES=y
@@ -237,11 +239,11 @@ CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_SPARSE_RCU_POINTER=y
 CONFIG_RCU_TRACE=y
 CONFIG_IRQSOFF_TRACER=y
-CONFIG_INTERRUPT_OFF_HIST=y
 CONFIG_SCHED_TRACER=y
-CONFIG_WAKEUP_LATENCY_HIST=y
 CONFIG_STACK_TRACER=y
+CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_FUNCTION_PROFILER=y
+CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_ARM64_CRYPTO=y
