--- a/drivers/edac/Kconfig
+++ b/drivers/edac/Kconfig
@@ -400,6 +400,15 @@ config EDAC_AXXIA_SYSMEM_5500
 	  the System Memory error detection. System Memory error
 	  detection is interrupt driven.
 
+config EDAC_AXXIA_SYSMEM_6700
+	depends on ARCH_AXXIA
+	bool "AXXIA EDAC SysMem Controller for 6700"
+	help
+	  Support for System Memory Denali controller error
+	  detection on the AXXIA AXM67xx devices. This enables
+	  the System Memory error detection. System Memory error
+	  detection is interrupt driven.
+
 config EDAC_AXXIA_CMEM_5600
 	depends on ARCH_AXXIA
 	bool "AXXIA EDAC CMem Controller for 5600"
@@ -408,6 +417,24 @@ config EDAC_AXXIA_CMEM_5600
 	  detection on the AXXIA AXM56xx devices. This enables
 	  the Configuration Memory error detection. Configuration Memory error
 	  detection is interrupt driven.
+
+config EDAC_AXXIA_CMEM_6700
+	depends on ARCH_AXXIA
+	bool "AXXIA EDAC CMem Controller for 6700"
+	help
+	  Support for Configuration Memory Denali controller error
+	  detection on the AXXIA AXM67xx devices. This enables
+	  the Configuration Memory error detection. Configuration Memory error
+	  detection is interrupt driven.
+
+config DEBUG_EDAC_AXXIA_CMEM
+	depends on ARCH_AXXIA
+	bool "AXXIA EDAC CMEM error injection interface."
+	help
+	  Support for configuration of CMEM edac error injection functionality.
+	  It works for both 5600 and 6700 board families.
+	  Enables error injection functionality for CMEM over procfs
+	  interface (/proc/driver/).
 
 config EDAC_AXXIA_L3_5500
 	tristate "AXXIA EDAC L3 Controller for 5500"
@@ -421,9 +448,17 @@ config EDAC_AXXIA_L3_5600
 	tristate "AXXIA EDAC L3 Controller for 5600"
 	help
 	  Support for the eight L3 caches error detection
-	  on the AXXIA AXM55xx devices. This enables the
+	  on the AXXIA AXM56xx devices. This enables the
 	  L3 cache error detection. L3 cache error detection
 	  uses polling mechanism.
+
+config EDAC_AXXIA_L3_6700
+	tristate "AXXIA EDAC L3 Controller for 6700"
+	help
+	  Support for the eight L3 caches error detection
+	  on the AXXIA AXM67xx devices. This enables the
+	  L3 cache error detection. L3 cache error detection
+	  can use polling mechanism or be interrupt driven.
 
 config EDAC_AXXIA_L2_CPU_5500
 	tristate "AXXIA EDAC L2/CPU Controller for 5500"
@@ -439,6 +474,14 @@ config EDAC_AXXIA_L2_CPU_5600
 	  Support for L2 cache and A57 CPU error detection
 	  on AXXIA AXM56xx devices. This enables the L2
 	  cache and A57 CPU error detction. L2 cache and A57
+	  CPU error detection uses polling mechanism.
+
+config EDAC_AXXIA_L2_CPU_6700
+	tristate "AXXIA EDAC L2/CPU Controller for 6700"
+	help
+	  Support for L2 cache and A53 CPU error detection
+	  on AXXIA AXM67xx devices. This enables the L2
+	  cache and A53 CPU error detction. L2 cache and A53
 	  CPU error detection uses polling mechanism.
 
 config EDAC_ALTERA
