axxia: Update the Axxia Configurations
Include DDR Retention Recovery Resets

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/arch/arm64/configs/axxia_x9_defconfig
+++ b/arch/arm64/configs/axxia_x9_defconfig
@@ -105,7 +105,6 @@ CONFIG_ARCH_AXXIA_NCR_RESET_CHECK=y
 CONFIG_AXXIA_OEM=y
 CONFIG_AXXIA_FAULT=y
 CONFIG_AXXIA_PEI=y
-CONFIG_AXXIA_MDIO=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
 # CONFIG_SCSI_LOWLEVEL is not set
@@ -149,6 +148,8 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_AXXIA=y
 CONFIG_GPIO_XGENE=y
+CONFIG_POWER_RESET_AXXIA=y
+CONFIG_POWER_RESET_AXXIA_DDR_RETENTION=y
 # CONFIG_HWMON is not set
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
